PA3/tests/bad/bad_let.cl
class Main {
	main() : SELF_TYPE {
		{
			let self : SELF_TYPE in self;
			let self : SELF_TYPE in a;
		}
	};
};